<resources>
    <string name="app_name">MyContentProviderExample</string>
    <string name="client_phone">Phone</string>
    <string name="client_email">E-mail</string>
    <string name="client_social">Social</string>
    <string name="no_clients">No clients found.</string>
    <string name="create">Create</string>
    <string name="client_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
</resources>
